--- a/CityInfo.API/appsettings.json
+++ b/CityInfo.API/appsettings.json
@@ -7,5 +7,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "mailSettings": {
+    "mailToAddress": "developer@mycompany.com",
+    "mailFromAddress": "noreply@mycompany.com"
+  },
   "AllowedHosts": "*"
 }
